--- a/crearMenu/templates/crearMenu/base.html
+++ b/crearMenu/templates/crearMenu/base.html
@@ -42,16 +42,13 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'crearMenu:lista_restaurantes' %}">Gestionar Restaurantes</a></li> <li><a class="dropdown-item" href="{% url 'crearMenu:lista_chefs' %}">Gestionar Chefs</a></li>
                             <li><a class="dropdown-item" href="{% url 'crearMenu:lista_ciudades' %}">Gestionar Ciudades</a></li>
+                            <li><a class="dropdown-item" href="{% url 'crearMenu:lista_categorias' %}">Gestionar Categorías</a></li>
                             <li><a class="dropdown-item" href="{% url 'crearMenu:lista_tipos_menu' %}">Tipos de Menú</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'crearMenu:crear_plato' %}">Nuevo Plato</a></li>
                             <li><a class="dropdown-item" href="{% url 'crearMenu:crear_categoria' %}">Nueva Categoría</a></li>
                             <li><a class="dropdown-item" href="{% url 'crearMenu:lista_platos' %}">Inventario de Platos</a></li>
                         </ul>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link text-warning" href="{% url 'crearMenu:reportes' %}">Reportes</a>
                     </li>
                 </ul>
             </div>
