--- a/crearMenu/templates/crearMenu/detalle_menu.html
+++ b/crearMenu/templates/crearMenu/detalle_menu.html
@@ -72,7 +72,7 @@
                                 <a href="{% url 'crearMenu:eliminar_detalle' detalle.pk %}" 
                                    class="btn btn-danger btn-sm"
                                    onclick="return confirm('¿Quitar este plato del menú?');">
-                                </a>
+                                Eliminar</a>
                             </td>
                         </tr>
                         {% empty %}
