--- a/crearMenu/templates/crearMenu/lista_ingredientes.html
+++ b/crearMenu/templates/crearMenu/lista_ingredientes.html
@@ -34,7 +34,7 @@
                             <td class="text-end">
                                 <a href="{% url 'crearMenu:eliminar_ingrediente' ing.pk %}" 
                                    class="btn btn-outline-danger btn-sm"
-                                   onclick="return confirm('¿Borrar ingrediente?');"></a>
+                                   onclick="return confirm('¿Borrar ingrediente?');">Eliminar</a>
                             </td>
                         </tr>
                         {% endfor %}
